--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PizzaLine</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h1>PizzaLine</h1>
+
+            <ul>
+                <a href=""><li>Home</li></a>
+                <a href=""><li>Carta</li></a>
+                <a href=""><li>Pedido</li></a>
+                <a href=""><li>Contacto</li></a>
+                <a href=""><li>Quienes somos?</li></a>
+            </ul>
+        </nav>
+    </header>
+
+
+
+
+    <footer>
+        <p>© Todos los derechos reservados</p>
+    </footer>
+
 </body>
 </html>
 
-//
