CAMBIO DE NOMBRE DE IMAGEN
de 123132.png a bebidas.png

--- a/carta.html
+++ b/carta.html
@@ -61,7 +61,7 @@
 
         <section>
           <h2>Bebidas</h2>
-          <img src="images/1261134.png" alt="icono bebidas" width="120px" id="iconBebidas">
+          <img src="images/bebidas.png" alt="icono bebidas" width="120px" id="iconBebidas">
           <ul class="listaBebidas">
             <li>
               <h3>Coca Cola 500ml</h3>
