Btn de cerrar sesión admin Agregar Item Pagina Eliminar Elementos Pagina Gestion de menu opciones Gestion de pedidos

--- a/admin/gestionarMenu.html
+++ b/admin/gestionarMenu.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav><a href="administracion.html">Inicio</a></nav>
+    <div>
+    <a href="agregarItem.html">
+        <button type="button">Agregar Item</button>
+    </a>
+
+    <a href="agregarPromos.html">
+        <button type="button">Agregar Promoción</button>
+    </a>
+
+    <a href="eliminarElementos.html">
+        <button type="button">Eliminar Elementos</button>
+    </a>
+</div>
+
 </body>
 </html>
