--- a/admin/administracion.html
+++ b/admin/administracion.html
@@ -8,7 +8,8 @@
 <body>
     <nav>
         <h2>PizzaLine administración</h2>
-        <button value="Cerrar Sesion"><a href="logueoAdmin.html"></a></button>
+        <button id="btn-logout">Cerrar sesión</button>
+
     </nav>
     <main>
         <div>
@@ -17,6 +18,7 @@
                 <li><p><a href="gestionarPedidos.html">Gestionar pedidos</a></p></li>
                 <li><p><a href="gestionarRoles.html">Gestionar roles</a></p></li>
                 <li><p><a href="agregarPromos.html">Agregar promos</a></p></li>
+                <li><p><a href="#Dashboard">Dashboard</a></p></li>
             </ul>
         </div>
     </main>
