Navegación entre paginas y correcta vinculacion del estilo

--- a/branches.html
+++ b/branches.html
@@ -6,7 +6,7 @@
     <title>PizzaLine - Sucursales</title>
 
     <!-- Importa el CSS general (incluye estilos base, header, footer y tarjetas) -->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
