--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PizzaLine - Inicio</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -18,10 +18,10 @@
         <!-- NAV -->
         <div class="navPrincipal">
             <ul>
-                <li><a href="pages/acerca.html">Acerca de Nosotros</a></li>
-                <li><a href="pages/carta.html">Carta</a></li>
-                <li><a href="pages/contacto.html">Contacto</a></li>
-                <li><a href="pages/sucursales.html">Sucursales</a></li>
+                <li><a href="info.html">Acerca de Nosotros</a></li>
+                <li><a href="carta.html">Carta</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="branches.html">Sucursales</a></li>
             </ul>
         </div>
 
