--- a/carta.html
+++ b/carta.html
@@ -99,7 +99,7 @@
     </main>
   </div>
 
-  <footer>
+  <footer id="footerCarta">
     © 2025 Pizzaline — Todos los derechos reservados.
   </footer>
 
