Navegacion entre paginas y cambio en el menú para agregar los productos desde la administracion

--- a/admin/eliminarElementos.html
+++ b/admin/eliminarElementos.html
@@ -6,6 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <h2>Eliminar Elementos</h2>
+        <a href="gestionarMenu.html"><button type="button">Volver</button></a>
+    </nav>
+
+     <section>
+            <h3>Listado de Items</h3>
+
+            <div id="lista-items" class="lista-admin">
+                <!--
+                    CARDS DE ITEMS
+                -->
+            </div>
+        </section>
+
+        <!-- LOG -->
+        <div id="mensaje"></div>
 </body>
 </html>
