--- a/admin/gestionarPedidos.html
+++ b/admin/gestionarPedidos.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <nav>
+        <h2>Eliminar Elementos</h2>
+        <a href="gestionarMenu.html"><button type="button">Volver</button></a>
+    </nav>
     <main>
 
         <h1>Gestión de pedidos</h1>
@@ -33,7 +37,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    
+
                     <tr>
                         <td>#1</td>
                         <td>Juan Pérez</td>
@@ -50,7 +54,7 @@
                         </td>
                     </tr>
 
-           
+
                 </tbody>
             </table>
         </section>
