--- a/admin/gestionarRoles.html
+++ b/admin/gestionarRoles.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <h2>Eliminar Elementos</h2>
+        <a href="gestionarMenu.html"><button type="button">Volver</button></a>
+    </nav>
     
+
+
 </body>
 </html>
