--- a/admin/agregarPromos.html
+++ b/admin/agregarPromos.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <h2>Agregar Promociones</h2>
+        <a href="gestionarMenu.html"><button type="button">Volver</button></a>
+    </nav>
 </body>
 </html>
