--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="login-btn">
-            <a href="pages/login.html">Login</a>
+            <a href="login.html">Login</a>
         </div>
     </div>
 
