--- a/admin/agregarItem.html
+++ b/admin/agregarItem.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 
 <body>
@@ -38,7 +39,7 @@
     </div>
 
     <div id="mensaje"></div>
-
+<script src="agregarItem.js"></script>
 </body>
 
 </html>
