--- a/carta.html
+++ b/carta.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
+ 
 </head>
 <body id="bodyCarta">
 
@@ -54,6 +55,6 @@
     © 2025 Pizzaline — Todos los derechos reservados.
   </footer>
 
-
+ <script src="carta.js"></script>
 </body>
 </html>
