AGREGACIO MOCKAPI Y CREACION DE SUBCARPETAS EN "ADMIN"

--- a/admin/MENU (mockapi)/agregarItem.html
+++ b/admin/MENU (mockapi)/agregarItem.html
@@ -32,7 +32,12 @@
             <label for="disponible">
                 Disponible
                 <input type="checkbox" id="disponible" checked>
-            </label>
+            </label> <br> <br>
+
+            <label for="descripcionItem">Descripción:</label>
+            <textarea name="descripcionItem" id="descripcionItem"></textarea> 
+
+            <br> <br>
 
             <button type="submit">Cargar Producto</button>
         </form>
