Actualizacion de registro e info

--- a/info.html
+++ b/info.html
@@ -1,78 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="infoTodo">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre nosotros</title>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
 </head>
-<body>
-    <header>
-        <h1>pizzaLine</h1>
-        <nav>
-            <a href="inicio">Inicio</a>
-            <a href="historia">Sobre nosotros</a>
-            <a href="galeria">Galeria</a>
-            <a href="contacto">Contacto</a>
+<body id="bodyInfo">
+    <header id="headerInfo">
+        <h1 id="h1Info">pizzaLine</h1>
+        <nav id="navInfo">
+            <a href="#inicio" class="aInfo">Inicio</a>
+            <a href="#historia" class="aInfo">Sobre nosotros</a>
+            <a href="carta.html" class="aInfo">Carta</a>
+            <a href="#contacto" class="aInfo">Contacto</a>
         </nav>
     </header>
 
-    <section id="inicio">
-        <h2>Bienvenidos</h2>
-        <img src="" alt="LOGO DE LA PIZZERIA" width=""> <!--INSERTAR LOGO DE LA PIZZERIA y ajustar con width-->
-        <p>TEXTO</p>
+    <section class="sectionInfo" id="inicio">
+        <h2 class="h2SectionInfo">Bienvenidos</h2>
+        <img class="imgSectionInfo" src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="LOGO DE LA PIZZERIA" width="">
+        <p class="pSectionInfo">En PizzaLine, hacemos pizza artesanal con el corazón puesto en cada masa. Somos una pizzería familiar que combina la auténtica tradición napolitana con la calidez de Villa María.
+Ingredientes frescos, masa fermentada 48 horas, horno a leña y recetas que han pasado la prueba del tiempo. Sin secretos, solo trabajo honesto y pasión por lo que hacemos.
+PizzaLine - Desde 1998 en Villa María</p>
     </section>
 
-    <section id="historia">
-        <h2>Sobre nosotros: </h2>
-        <h3>Origen</h3>
-        <img src="" alt="FOTO ANTIGUA DE LA PIZZERIA" width=""> <!--INSERTAR LA FOTO Y AJUSTAR TAMBIEN-->
-        <p>TEXTO</p>
+    <section class="sectionInfo" id="historia">
+        <h2 class="h2SectionInfo">Sobre nosotros: </h2>
+        <h3 class="h3SectionInfo">Origen</h3>
+        <img class="imgSectionInfo" src="images/pizzeria antigua.jpeg" alt="FOTO ANTIGUA DE LA PIZZERIA" width="450px">
+        <p class="pSectionInfo">En 1985, el abuelo Giuseppe tenía una pequeña pizzería en Nápoles. Décadas después, su nieto Marco emigró a Argentina con esas recetas ancestrales escritas a mano en un viejo cuaderno.
+En 1998, Marco abrió PizzaLine en Villa María. El nombre honra esa "línea" familiar que conecta generaciones de pizzeros. Combinó las técnicas napolitanas centenarias con ingredientes locales, manteniendo la esencia pero adaptándose al paladar argentino.</p>
 
         <hr>
 
-        <h3>Primeros años</h3>
-        <p>TEXTO</p>
+        <h3 class="h3SectionInfo">Primeros años</h3>
+        <p class="pSectionInfo">1998: un local pequeño con cuatro mesas y un horno de segunda mano. Marco trabajaba solo, de la masa a la limpieza. Los clientes que probaban la pizza volvían: "La masa es diferente", decían. Era la fermentación lenta, la técnica napolitana.
+De boca en boca creció. Primer ayudante en 2002, segundo pizzero en 2005. La filosofía nunca cambió: cada pizza como si fuera para tu propia familia.</p>
         <blockquote>
-            <p><i>CITA/FRASE DE UN FUNDADOR O ALGO PARECIDO</i></p>
+            <p><i>"La pizza y el código tienen algo en común: puedes copiar la receta, pero sin dedicación, nunca será lo mismo." - Marco, fundador de PizzaLine</i></p>
         </blockquote>
 
         <hr>
 
-        <h3>Crecimiento y Evolucion</h3>
-        <p>TEXTO</p>
+        <h3 class="h3SectionInfo">Crecimiento y Evolucion</h3>
+        <p class="pSectionInfo"></p>
         <ul>
-            <li>INSERTAR MOMENTOS IMOPORTANTES EN ESTA LISTA CON SUS RESPECTIVOS AÑOS</li> <!--SEGUIR AGREGANDO-->
+            <li>2008: Ampliación del local, segundo horno a leña. Cada nuevo integrante aprende directamente de Marco.</li>
+            <li>2012: Delivery con cajas especiales y tiempos estrictos para mantener la calidad.</li>
+            <li>2015: Sistema de pedidos online. "La tecnología debe servir a la pizza, no al revés", decía Marco.</li>
+            <li>2020: La pandemia reforzó nuestra esencia. El delivery se multiplicó sin perder el estándar.</li>
+            <li>Hoy: Dos locales, más de 20 personas en el equipo, miles de pizzas al mes. Marco sigue viniendo cada mañana a revisar la masa y mantener viva esa línea que conecta con el nonno Giuseppe.</li>
         </ul>
 
         <hr>
 
-        <h3>Actualidad</h3>
-        <img src="" alt="PIZZERIA EN LA ACTUALIDAD" width=""> <!--LO MISMO QUE EN LOS OTROS CASOS-->
-        <p>TEXTO</p>
+        <h3 class="h3SectionInfo">Actualidad</h3>
+        <img class="imgSectionInfo" src="images/actualidad.jpg" alt="PIZZERIA EN LA ACTUALIDAD" width="500px">
+        <p class="pSectionInfo">PizzaLine hoy es una pizzería consolidada en Villa María, pero con el mismo espíritu de 1998. Dos locales, pedidos online, delivery propio, y un equipo que respira la filosofía del nonno Giuseppe.
+Seguimos fermentando la masa 48 horas, seleccionando ingredientes personalmente, y horneando a leña. La diferencia es que ahora lo hacemos para cientos de familias cada semana.
+Marco continúa al frente, enseñando, supervisando, innovando sin perder la tradición. Su hijo Luciano se incorporó en 2022, aprendiendo las recetas que algún día pasará a la siguiente generación.</p>
     </section>
 
-    <section id="galeria">
-        <h2>Galeria</h2>
-        <p>TEXTO</p>
+    <section class="sectionInfo" id="contacto">
+        <h2 class="h2SectionInfo">Contacto</h2>
+        <p class="pSectionInfo"><strong>DIRECCION: </strong>Av. Fake 1404, Villa María, Córdoba</p>
+        <p class="pSectionInfo"><strong>TELEFONO: </strong>(0353) 452-7788</p>
+        <p class="pSectionInfo"><strong>EMAIL: </strong>pizzaline@gmail.com</p>
 
-        <!-- COPIAR Y PEGAR ESTO CON DISTINTOS MOMENTOS ESPECIALES Y LAS VARIEDADES DE PIZZAS:
-        <figure>
-            <img src="" alt="MOMENTO ESPECIAL O UNA VARIEDAD DE PIZZA" width="">
-            <figcaption>DESCRIPCION</figcaption>
-        </figure>
-        -->
-    </section>
-
-    <section id="contacto">
-        <h2>Contacto</h2>
-        <p><strong>DIRECCION: </strong>*PONER DIRECCION*</p>
-        <p><strong>TELEFONO: </strong>*PONER TELEFONO*</p>
-        <p><strong>EMAIL: </strong>*PONER EMAIL*</p>
-
-        <h3>Horarios</h3>
-        <p>Lunes a viernes: </p>
-        <p>Sabados y Domingos: </p>
+        <h3 class="h3SectionInfo">Horarios</h3>
+        <p class="pSectionInfo">Lunes a viernes: 19:00 - 00:00 hs</p>
+        <p class="pSectionInfo">Sabados y Domingos: 12:00 - 15:00 / 19:00 - 01:00 hs</p>
     </section>
 </body>
 </html>
