--- a/registroUsuario.html
+++ b/registroUsuario.html
@@ -3,31 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registrate</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Formulario de registro</h1>
-    <form action="" method="post">
+<body id="bodyRegistro">
+    <h1 id="h1Registro">Formulario de registro</h1>
+    <form action="" method="post" id="formulario">
         <div>
-            <label for="nombre">Nombre:</label>
+            <label class="labelReg" for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
         </div>
         <div>
-            <label for="apellido">Apellido:</label>
+            <label class="labelReg" for="apellido">Apellido:</label>
             <input type="text" id="apellido" name="apellido" required>
         </div>
         <div>
-            <label for="telefono">Telefono:</label>
+            <label class="labelReg" for="telefono">Telefono:</label>
             <input type="tel" id="telefono" name="telefono" required>
         </div>
         <div>
-            <label for="email">Email:</label>
+            <label class="labelReg" for="email">Email:</label>
             <input type="email" id="email" name="email" required>
         </div>
         <div>
-            <label for="password">Contraseña:</label>
+            <label class="labelReg" for="password">Contraseña:</label>
             <input type="password" id="password" name="password" required>
         </div>
+        <div>
+            <button id="botonReg" type="submit">Registrarse</button>
+        </div>
     </form>
+    <script src="registroUsuario.js"></script>
 </body>
 </html>
