Correccion navegacion entre páginas admin

--- a/admin/MENU (mockapi)/agregarItem.html
+++ b/admin/MENU (mockapi)/agregarItem.html
@@ -11,7 +11,9 @@
 <body>
     <nav>
         <h2>Agregar Item</h2>
-        <a href="gestionarMenu.html"><button type="button">Volver</button></a>
+        <a href="/admin/gestionarMenu.html">
+            <button type="button">Volver</button>
+        </a>
     </nav>
 
     <div>
