--- a/admin/agregarPromos.html
+++ b/admin/agregarPromos.html
@@ -8,7 +8,7 @@
 <body>
     <nav>
         <h2>Agregar Promociones</h2>
-        <a href="gestionarMenu.html"><button type="button">Volver</button></a>
+        <a href="administracion.html"><button type="button">Volver</button></a>
     </nav>
 </body>
 </html>
