--- a/admin/gestionarPedidos.html
+++ b/admin/gestionarPedidos.html
@@ -4,7 +4,7 @@
 <head>
     <nav>
         <h2>Eliminar Elementos</h2>
-        <a href="gestionarMenu.html"><button type="button">Volver</button></a>
+        <a href="administracion.html"><button type="button">Volver</button></a>
     </nav>
     <main>
 
