--- a/admin/gestionarRoles.html
+++ b/admin/gestionarRoles.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <nav>
-        <h2>Eliminar Elementos</h2>
-        <a href="gestionarMenu.html"><button type="button">Volver</button></a>
+        <h2>Gestionar Roles</h2>
+        <a href="administracion.html"><button type="button">Volver</button></a>
     </nav>
-    
+
 
 
 </body>
