Botones para volver en Carta e Info

--- a/carta.html
+++ b/carta.html
@@ -14,6 +14,11 @@
  
 </head>
 <body id="bodyCarta">
+  
+  <a href="index.html" id="btnVolver">
+    <span class="pizzaIcono">🍕</span>
+    <span class="textoVolver">Volver</span>
+</a>
 
   <nav>
    
