--- a/info.html
+++ b/info.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="bodyInfo">
+    <a href="index.html" id="btnVolver">
+    <span class="pizzaIcono">🍕</span>
+    <span class="textoVolver">Volver</span>
+</a>
     <header id="headerInfo">
         <h1 id="h1Info">pizzaLine</h1>
         <nav id="navInfo">
             <a href="#inicio" class="aInfo">Inicio</a>
             <a href="#historia" class="aInfo">Sobre nosotros</a>
-            <a href="carta.html" class="aInfo">Carta</a>
             <a href="#contacto" class="aInfo">Contacto</a>
         </nav>
     </header>
