Cambiar Visibilidad de productos

--- a/admin/gestionarMenu.html
+++ b/admin/gestionarMenu.html
@@ -17,7 +17,7 @@
     </a>
 
     <a href="eliminarElementos.html">
-        <button type="button">Eliminar Elementos</button>
+        <button type="button">Visibilidad de productos</button>
     </a>
 </div>
 
