--- a/admin/eliminarElementos.html
+++ b/admin/eliminarElementos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <h2>Eliminar Elementos</h2>
+        <h2>Visibilidad de productos</h2>
         <a href="gestionarMenu.html"><button type="button">Volver</button></a>
     </nav>
 
@@ -23,5 +23,6 @@
 
         <!-- LOG -->
         <div id="mensaje"></div>
+        <script src="eliminarElementos.js"></script>
 </body>
 </html>
