--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
             <input type="password" placeholder="Contraseña" required>
             <button type="submit">Ingresar</button>
         </form>
-        <p>¿No tenés cuenta? <a href="registro.html">Registrate acá</a></p>
+        <p>¿No tenés cuenta? <a href="registroUsuario.html">Registrate acá</a></p>
     </section>
 
     <!-- ===== FOOTER LOGIN ===== -->
