--- a/admin/gestionarRoles.html
+++ b/admin/gestionarRoles.html
@@ -11,7 +11,7 @@
     <nav>
         <h2>Crear usuarios</h2>
 
-        <a href="/admin/gestionarRoles.html">
+        <a href="administracion.html">
             <button type="button">Volver</button>
         </a>
     </nav>
