--- a/index.html
+++ b/index.html
@@ -91,20 +91,36 @@
         </form>
     </section>
 
+    <!-- ===== ⭐ RESEÑAS (AGREGADO) ===== -->
+    <section id="reseñas" style="padding: 40px; background:#fff8f0;">
+        <h3 style="text-align:center; color:#d32f2f; font-size:28px;">Reseñas de clientes</h3>
+
+        <form id="form-review" style="max-width:600px; margin:20px auto; display:flex; flex-direction:column; gap:10px;">
+            <input id="review-name" placeholder="Tu nombre" required style="padding:10px; border-radius:6px; border:1px solid #ccc;" />
+            <textarea id="review-text" placeholder="Tu reseña" required style="padding:10px; height:100px; border-radius:6px; border:1px solid #ccc;"></textarea>
+
+            <select id="review-rating" style="padding:10px; border-radius:6px; border:1px solid #ccc;">
+                <option value="5">5 ⭐</option>
+                <option value="4">4 ⭐</option>
+                <option value="3">3 ⭐</option>
+                <option value="2">2 ⭐</option>
+                <option value="1">1 ⭐</option>
+            </select>
+
+            <button style="padding:12px; background:#d32f2f; color:white; border:none; border-radius:6px; cursor:pointer;">Enviar reseña</button>
+        </form>
+
+        <div id="reviews-list" style="max-width:700px; margin:20px auto;"></div>
+    </section>
+    <!-- ===== FIN RESEÑAS ===== -->
+
+
     <!-- ===== FOOTER ===== -->
     <div class="footerPrincipal">
         <p>© 2025 PizzaLine - Todos los derechos reservados.</p>
     </div>
 
     <!-- ===== BOTÓN FLOTANTE ===== -->
-    <button id="btn-flotante">🛒</button>
-
-    <script src="js/main.js"></script>
-</body>
-</html>
-
-    </footer>
-
     <button id="btn-flotante">🛒</button>
 
     <script src="js/main.js"></script>
