--- a/index.html
+++ b/index.html
@@ -79,6 +79,31 @@
         </div>
     </div>
 
+    <!-- ===== CONTACTO, REDES Y MAPA (AGREGADO AQUÍ) ===== -->
+    <section class="contacto-rapido" style="padding:30px; background:#fafafa; text-align:center;">
+        <h3>Encuéntranos</h3>
+
+        <p><strong>Horario:</strong><br>
+            Lun-Vie: 19:00 - 00:00<br>
+            Sab-Dom: 12:00 - 15:00 / 19:00 - 01:00
+        </p>
+
+        <h4>Redes</h4>
+        <div class="socials" style="margin-bottom:15px;">
+            <a href="https://instagram.com" target="_blank">Instagram</a> |
+            <a href="https://facebook.com" target="_blank">Facebook</a>
+        </div>
+
+        <h4>Ubicación</h4>
+
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!...replace_with_valid_embed..."
+            width="100%" height="250" style="border:0; border-radius:10px;"
+            allowfullscreen="" loading="lazy">
+        </iframe>
+    </section>
+    <!-- ===== FIN CONTACTO ===== -->
+
     <!-- ===== REGISTRO ===== -->
     <section class="registro">
         <h2>Registrate para hacer tu pedido</h2>
@@ -91,7 +116,7 @@
         </form>
     </section>
 
-    <!-- ===== ⭐ RESEÑAS (AGREGADO) ===== -->
+    <!-- ===== ⭐ RESEÑAS ===== -->
     <section id="reseñas" style="padding: 40px; background:#fff8f0;">
         <h3 style="text-align:center; color:#d32f2f; font-size:28px;">Reseñas de clientes</h3>
 
@@ -112,8 +137,6 @@
 
         <div id="reviews-list" style="max-width:700px; margin:20px auto;"></div>
     </section>
-    <!-- ===== FIN RESEÑAS ===== -->
-
 
     <!-- ===== FOOTER ===== -->
     <div class="footerPrincipal">
@@ -126,3 +149,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
