--- a/info.html
+++ b/info.html
@@ -6,11 +6,14 @@
     <title>Sobre nosotros</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body id="bodyInfo">
+
     <a href="index.html" id="btnVolver">
-    <span class="pizzaIcono">🍕</span>
-    <span class="textoVolver">Volver</span>
-</a>
+        <span class="pizzaIcono">🍕</span>
+        <span class="textoVolver">Volver</span>
+    </a>
+
     <header id="headerInfo">
         <h1 id="h1Info">pizzaLine</h1>
         <nav id="navInfo">
@@ -22,24 +25,29 @@
 
     <section class="sectionInfo" id="inicio">
         <h2 class="h2SectionInfo">Bienvenidos</h2>
-        <img class="imgSectionInfo" src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="LOGO DE LA PIZZERIA" width="">
-        <p class="pSectionInfo">En PizzaLine, hacemos pizza artesanal con el corazón puesto en cada masa. Somos una pizzería familiar que combina la auténtica tradición napolitana con la calidez de Villa María.
-Ingredientes frescos, masa fermentada 48 horas, horno a leña y recetas que han pasado la prueba del tiempo. Sin secretos, solo trabajo honesto y pasión por lo que hacemos.
-PizzaLine - Desde 1998 en Villa María</p>
+        <img class="imgSectionInfo" src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="LOGO DE LA PIZZERIA">
+        <p class="pSectionInfo">
+            En PizzaLine, hacemos pizza artesanal con el corazón puesto en cada masa. Somos una pizzería familiar que combina la auténtica tradición napolitana con la calidez de Villa María.
+            Ingredientes frescos, masa fermentada 48 horas, horno a leña y recetas que han pasado la prueba del tiempo. Sin secretos, solo trabajo honesto y pasión por lo que hacemos.
+            PizzaLine - Desde 1998 en Villa María
+        </p>
     </section>
 
     <section class="sectionInfo" id="historia">
         <h2 class="h2SectionInfo">Sobre nosotros: </h2>
+
         <h3 class="h3SectionInfo">Origen</h3>
         <img class="imgSectionInfo" src="images/pizzeria antigua.jpeg" alt="FOTO ANTIGUA DE LA PIZZERIA" width="450px">
-        <p class="pSectionInfo">En 1985, el abuelo Giuseppe tenía una pequeña pizzería en Nápoles. Décadas después, su nieto Marco emigró a Argentina con esas recetas ancestrales escritas a mano en un viejo cuaderno.
-En 1998, Marco abrió PizzaLine en Villa María. El nombre honra esa "línea" familiar que conecta generaciones de pizzeros. Combinó las técnicas napolitanas centenarias con ingredientes locales, manteniendo la esencia pero adaptándose al paladar argentino.</p>
+        <p class="pSectionInfo">
+            En 1985, el abuelo Giuseppe tenía una pequeña pizzería en Nápoles...
+        </p>
 
         <hr>
 
         <h3 class="h3SectionInfo">Primeros años</h3>
-        <p class="pSectionInfo">1998: un local pequeño con cuatro mesas y un horno de segunda mano. Marco trabajaba solo, de la masa a la limpieza. Los clientes que probaban la pizza volvían: "La masa es diferente", decían. Era la fermentación lenta, la técnica napolitana.
-De boca en boca creció. Primer ayudante en 2002, segundo pizzero en 2005. La filosofía nunca cambió: cada pizza como si fuera para tu propia familia.</p>
+        <p class="pSectionInfo">
+            1998: un local pequeño con cuatro mesas...
+        </p>
         <blockquote>
             <p><i>"La pizza y el código tienen algo en común: puedes copiar la receta, pero sin dedicación, nunca será lo mismo." - Marco, fundador de PizzaLine</i></p>
         </blockquote>
@@ -47,22 +55,21 @@ De boca en boca creció. Primer ayudante en 2002, segundo pizzero en 2005. La fi
         <hr>
 
         <h3 class="h3SectionInfo">Crecimiento y Evolucion</h3>
-        <p class="pSectionInfo"></p>
         <ul>
-            <li>2008: Ampliación del local, segundo horno a leña. Cada nuevo integrante aprende directamente de Marco.</li>
-            <li>2012: Delivery con cajas especiales y tiempos estrictos para mantener la calidad.</li>
-            <li>2015: Sistema de pedidos online. "La tecnología debe servir a la pizza, no al revés", decía Marco.</li>
-            <li>2020: La pandemia reforzó nuestra esencia. El delivery se multiplicó sin perder el estándar.</li>
-            <li>Hoy: Dos locales, más de 20 personas en el equipo, miles de pizzas al mes. Marco sigue viniendo cada mañana a revisar la masa y mantener viva esa línea que conecta con el nonno Giuseppe.</li>
+            <li>2008: Ampliación del local.</li>
+            <li>2012: Delivery renovado.</li>
+            <li>2015: Sistema de pedidos online.</li>
+            <li>2020: Pandemia.</li>
+            <li>Hoy: Dos locales en la ciudad.</li>
         </ul>
 
         <hr>
 
         <h3 class="h3SectionInfo">Actualidad</h3>
         <img class="imgSectionInfo" src="images/actualidad.jpg" alt="PIZZERIA EN LA ACTUALIDAD" width="500px">
-        <p class="pSectionInfo">PizzaLine hoy es una pizzería consolidada en Villa María, pero con el mismo espíritu de 1998. Dos locales, pedidos online, delivery propio, y un equipo que respira la filosofía del nonno Giuseppe.
-Seguimos fermentando la masa 48 horas, seleccionando ingredientes personalmente, y horneando a leña. La diferencia es que ahora lo hacemos para cientos de familias cada semana.
-Marco continúa al frente, enseñando, supervisando, innovando sin perder la tradición. Su hijo Luciano se incorporó en 2022, aprendiendo las recetas que algún día pasará a la siguiente generación.</p>
+        <p class="pSectionInfo">
+            PizzaLine hoy es una pizzería consolidada en Villa María...
+        </p>
     </section>
 
     <section class="sectionInfo" id="contacto">
@@ -75,5 +82,18 @@ Marco continúa al frente, enseñando, supervisando, innovando sin perder la tra
         <p class="pSectionInfo">Lunes a viernes: 19:00 - 00:00 hs</p>
         <p class="pSectionInfo">Sabados y Domingos: 12:00 - 15:00 / 19:00 - 01:00 hs</p>
     </section>
+
+    <!-- ========== BOTÓN IR ARRIBA (AGREGADO) ========== -->
+    <button id="btnTop" title="Ir arriba">↑</button>
+
+    <script>
+        const btnTop = document.getElementById('btnTop');
+        btnTop.style = "position:fixed;right:20px;bottom:40px;width:50px;height:50px;font-size:20px;border-radius:50%;background:#FFD700;border:none;cursor:pointer;z-index:9999;";
+        btnTop.addEventListener('click', () => 
+            window.scrollTo({ top: 0, behavior: 'smooth' })
+        );
+    </script>
+    <!-- ========== FIN BOTÓN ========== -->
+
 </body>
 </html>
